--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ fieldset{
     background: #efefef
 }
 
-@media ( max-width: 500px ) {
+@media ( min-width: 500px ) {
     fieldset, .a-input{
         max-width: 500px;
         font: normal 16px/20px Arial, sans-serif;
